test/testdata/classes/instance/blank_field_access_error.lox
class Foo {
  bar() {
    // error: '_' cannot be used as a field name
    // lint error: '_' cannot be used as a field name
    print this._;
  }
}
var foo = Foo();
foo.bar();
